Rectified an error

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 parser
 mac/
+SCRUBD-CD/data/parse_sailfish.py
+SCRUBD-CD/data/solidity_codes/all.csv
+SCRUBD-CD/data/solidity_codes/sailfish/
+SCRUBD-SD/data/all_functions.csv
+SCRUBD-SD/data/filter.py
+SCRUBD-SD/data/find_missing.py
+SCRUBD-SD/data/missing_entries.csv
+SCRUBD-SD/data/parse.py
+
